Upgrade the version of containerd pkg to avoid the vulnerability and add DOCKER_POC_TEST option for docker poc test

--- a/setup.env
+++ b/setup.env
@@ -42,6 +42,10 @@ export CBSTORE_ROOT=$CBSPIDER_ROOT
 # root path of cb-log
 export CBLOG_ROOT=$CBSPIDER_ROOT
 
+# docker test option
+# default: OFF
+export DOCKER_POC_TEST=OFF
+
 # if value is empty, REST Auth disabed.
 export API_USERNAME=
 export API_PASSWORD=
